nav brand development

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#">RTH Cloud</a>
+            <a class="navbar-brand" href="#">RTH Cloud | Development</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,11 +49,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Get work done <span>faster</span> and <br> <span>better</span> with us</h1>
-<<<<<<< HEAD
-            <a href="#" class="btn btn-primary tombol">Our Work | development</a>
-=======
             <a href="#" class="btn btn-primary tombol">Our Work | New</a>
->>>>>>> heropage
         </div>
     </div>
     <!-- Akhir Jumbotron -->
@@ -68,7 +64,7 @@
                 <div class="row">
                     <div class="col-lg">
                         <img src="img/employee.png" alt="Employee" class="float-left">
-                        <h4>24 Hours</h4>
+                        <h4>22 Hours</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                     <div class="col-lg">
