--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <h5>"Bekerja dengan suasana hati yang lebih asik dan mempelajari hal baru setiap harinya."</h5>
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, quis.</h5>
                 </div>
             </div>
 
