--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
             <div class="col-lg">
                 <h3>You <span>work</span> like at <span>home</span></h3>
                 <p>Bekerja dengan suasana hati yang lebig asik dan mempelajari hal baru setiap harinya.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis sequi veniam ratione minus tempora
+                    cum.</p>
                 <a href="#" class="btn btn-primary tombol">Gallery</a>
             </div>
         </div>
@@ -101,7 +103,6 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <h5>"Bekerja dengan suasana hati yang lebih asik dan mempelajari hal baru setiap harinya."</h5>
-                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, quis.</h5>
                 </div>
             </div>
 
