--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
         </div>
         <!-- Akhir Testimonial -->
 
+        <!-- baru cek -->
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam ea non fugit necessitatibus, nihil quaerat
+            dolores nam, voluptates cumque, cum perferendis amet minus! Velit, sequi est.</p>
+
         <!-- Footer -->
         <div class="row footer">
             <div class="col text-center">
