--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam ea non fugit necessitatibus, nihil quaerat
             dolores nam, voluptates cumque, cum perferendis amet minus! Velit, sequi est.</p>
 
+        <h1>Lorem ipsum dolor sit amet.</h1>
         <!-- Footer -->
         <div class="row footer">
             <div class="col text-center">
