--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             dolores nam, voluptates cumque, cum perferendis amet minus! Velit, sequi est.</p>
 
         <h1>Lorem ipsum dolor sit amet.</h1>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
         <!-- Footer -->
         <div class="row footer">
             <div class="col text-center">
