--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
         <h1>Lorem ipsum dolor sit amet.</h1>
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, aspernatur.</h3>
         <!-- Footer -->
         <div class="row footer">
             <div class="col text-center">
